feat: Added refresh logic on backend
